baumstamm-lib/src/snapshots/baumstamm_lib__graph__test__indirect_di-3.snap
---
source: baumstamm-lib/src/graph.rs
expression: person_layers
---
[
    [
        0,
        1,
        2,
        3,
        4,
        5,
    ],
    [
        6,
        5,
    ],
    [
        7,
    ],
]
