baumstamm-lib/src/snapshots/baumstamm_lib__graph__test__indirect_di2-2.snap
---
source: baumstamm-lib/src/graph.rs
expression: "&cut_graph.layers"
---
[
    [
        0,
    ],
    [
        1,
        2,
    ],
    [
        4,
        5,
        3,
        6,
    ],
    [
        7,
        8,
        A,
        9,
    ],
]
