baumstamm-lib/src/snapshots/baumstamm_lib__graph__test__indirect_di2-3.snap
---
source: baumstamm-lib/src/graph.rs
expression: person_layers
---
[
    [
        0,
        1,
    ],
    [
        2,
        3,
    ],
    [
        6,
        7,
        4,
        A,
        5,
        8,
        9,
    ],
    [
        A,
    ],
]
