baumstamm-lib/src/snapshots/baumstamm_lib__graph__test__indirect_di2.snap
---
source: baumstamm-lib/src/graph.rs
expression: "&cut_graph.graph"
---
Graph {
    sources: [
        0,
        3,
        6,
    ],
    nodes: [
        Node {
            value: 0,
            children: [
                1,
                2,
            ],
        },
        Node {
            value: 1,
            children: [
                4,
            ],
        },
        Node {
            value: 2,
            children: [
                5,
            ],
        },
        Node {
            value: 3,
            children: [
                7,
                A,
            ],
        },
        Node {
            value: 4,
            children: [
                7,
            ],
        },
        Node {
            value: 5,
            children: [
                8,
            ],
        },
        Node {
            value: 6,
            children: [
                8,
                9,
            ],
        },
        Node {
            value: 7,
            children: [],
        },
        Node {
            value: 8,
            children: [],
        },
        Node {
            value: 9,
            children: [],
        },
        Node {
            value: A,
            children: [],
        },
    ],
}
