baumstamm-lib/src/snapshots/baumstamm_lib__graph__test__siblings.snap
---
source: baumstamm-lib/src/graph.rs
expression: "&cut_graph.graph"
---
Graph {
    sources: [
        0,
        1,
    ],
    nodes: [
        Node {
            value: 0,
            children: [
                2,
            ],
        },
        Node {
            value: 1,
            children: [
                2,
            ],
        },
        Node {
            value: 2,
            children: [
                3,
            ],
        },
        Node {
            value: 3,
            children: [
                4,
            ],
        },
        Node {
            value: 4,
            children: [
                5,
            ],
        },
        Node {
            value: 5,
            children: [],
        },
    ],
}
