baumstamm-lib/src/snapshots/baumstamm_lib__graph__test__sort_long_chain-2.snap
---
source: baumstamm-lib/src/graph.rs
expression: layers
---
[
    [
        0,
        1,
    ],
    [
        2,
        6,
        7,
        8,
        A,
        C,
    ],
    [
        3,
        4,
        5,
        9,
        B,
    ],
]
